<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@android:color/background_light"
    android:gravity="clip_vertical"
    android:orientation="vertical"
    android:useDefaultMargins="true">

    <Button
        android:id="@+id/concederPermissaoGpsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|fill_horizontal"
        android:backgroundTint="@color/colorAccent"
        android:shadowColor="@android:color/black"
        android:text="@string/conceder_permissao"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ativarGpsButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/ativarGps"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/desativarGpsButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/desativarGps"
            android:textColor="@color/colorPrimary"
            android:visibility="visible"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/iniciarPercursoButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/iniciarPercurso"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/terminarPercursoButton"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:shadowColor="@android:color/black"
            android:text="@string/terminarPercurso"
            android:textColor="@color/colorPrimary"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:id="@+id/labelDistanciaPercorridaTextView"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|fill_horizontal|center_vertical"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:background="@color/colorPrimary"
            android:text="@string/distanciaPercorrida"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/distanciaPercorridaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal|center_vertical"
            android:layout_weight="16"
            android:gravity="center|center_horizontal|center_vertical"
            android:hint="@string/hintDistanciaPercorrida"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <TextView
            android:id="@+id/labelTempoPassadoTextView"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/tempoPassado"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size" />

        <Chronometer
            android:id="@+id/cronometro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="3"
            android:gravity="center|center_horizontal|center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorAccent"
        android:gravity="center|center_vertical"
        android:text="@string/ultimo_percurso"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelDistanciaPercursoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center|center_vertical"
            android:text="@string/distanciaPercorrida"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/distanciaPercursoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/labelTempoPercursoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:gravity="center|center_vertical"
            android:text="@string/tempo_percurso"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tempoPercursoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="5dp"
        android:background="@android:color/holo_blue_dark">

        <ImageButton
            android:id="@+id/buscarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:elevation="6dp"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_search_category_default"
            android:contentDescription="@string/busca" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/buscarTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimaryDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/buscarTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/buscaEncontrar"
                android:gravity="center"
                />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</LinearLayout>